# Sahel13.github.io

./: .gitignore  AGENTS.md  README.md  all-news.md  blog.md  gatsby-config.ts  gatsby-ssr.js  hakyll-site.cabal  index.md  news.md  package-lock.json  package.json  site.hs  stack.yaml  start_dev_server.sh  tailwind.config.js
.github/workflows/: pages.yml
bib/: bibliography.bib
docs/: atom.xml  blog.html  index.html
docs/posts/: asynchronous-copy-cute-dsl.html  expected-information-as-expected-utility.html  latex-in-markdown-vim.html  steering-llms-with-smc.html
docs/styles/: main.css
docs/tags/: bayesian-experimental-design.html  latex.html  machine-learning.html  neovim.html  programming.html  sequential-monte-carlo.html
posts/: asynchronous-copy-cute-dsl.org  expected-information-as-expected-utility.md  latex-in-markdown-vim.md  steering-llms-with-smc.md
scripts/: math.ts  theme.js
src/: News.hs  site.hs
src/components/: Footer.tsx  Header.tsx  Layout.tsx  NavigationBar.tsx  Paper.tsx  SectionHeader.tsx  Seo.tsx
src/data/: preprints.ts
src/hooks/: use-site-metadata.tsx
src/pages/: index.tsx
styles/: fonts.scss  main.scss
templates/: default.html  news-list.html  post-list.html  post.html  tag.html
