name:               hakyll-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  hs-source-dirs:   src
  other-modules:    News
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , text
                  , process
                  , pandoc-types
                  , pandoc
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
